Editor styles: added fixes for some alignment issues

--- a/_source/scss/editor.scss
+++ b/_source/scss/editor.scss
@@ -70,8 +70,41 @@ body:not( .editor-styles-wrapper ) {
 	
 	&[data-align="wide"] {
 		max-width: $wide_blocks_width; // default: 1100px
+		
+		// fixes
+		.alignwide {
+			width: 100%;
+			left: 0;
+		}
 	}
 	&[data-align="full"] {
 		max-width: none;
+		
+		// fixes
+		.alignfull {
+			width: 100%;
+			left: 0;
+		}
+	}
+	
+	// Alignment variations
+	&[data-align="center"] {
+		clear: both;
+	}
+	&[data-align="left"] > .is-block-content {
+		@extend .float-left;
+		
+		// fixes
+		.alignleft {
+			max-width: 100%;
+		}
+	}
+	&[data-align="right"] > .is-block-content {
+		@extend .float-right;
+		
+		// fixes
+		.alignright {
+			max-width: 100%;
+		}
 	}
 }
